==> yuleiw76-jpg/STM32--100DAY-/Day18_PID_Tuning/Code/11.PID速度闭环/HARDWARE/TIM/tim.c <==
#include "tim.h"
#include "pid.h"
#include "encode.h"

void TIM3_Init(u16 arr, u16 psc)
{
    TIM_TimeBaseInitTypeDef TIM_TimeBaseStructure;
    NVIC_InitTypeDef NVIC_InitStructure;

    RCC_APB1PeriphClockCmd(RCC_APB1Periph_TIM3, ENABLE);

    TIM_TimeBaseStructure.TIM_Period = arr;
    TIM_TimeBaseStructure.TIM_Prescaler = psc;
    TIM_TimeBaseStructure.TIM_ClockDivision = 0;
    TIM_TimeBaseStructure.TIM_CounterMode = TIM_CounterMode_Up;
    TIM_TimeBaseInit(TIM3, &TIM_TimeBaseStructure);

    TIM_ITConfig(TIM3, TIM_IT_Update, ENABLE);
    NVIC_InitStructure.NVIC_IRQChannel = TIM3_IRQn;
    NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
    NVIC_InitStructure.NVIC_IRQChannelSubPriority = 2;
    NVIC_InitStructure.NVIC_IRQChannelCmd = ENABLE;
    NVIC_Init(&NVIC_InitStructure);

    TIM_Cmd(TIM3, ENABLE);
}

void TIM3_IRQHandler(void)
{
    if (TIM_GetITStatus(TIM3, TIM_IT_Update) != RESET)
    {
        /* The current main.c configuration calls this ISR every 100 ms. */
        speed = ((float)((circle_count - last_count) * 1560
                + ((int)TIM4->CNT - last_num))) / 1560.0f / 0.1f;
        last_count = circle_count;
        speed = -speed;
        last_num = TIM4->CNT;

        TIM_ClearITPendingBit(TIM3, TIM_IT_Update);
    }
}

void TIM2_IRQHandler(void)
{
    if (TIM_GetITStatus(TIM2, TIM_IT_Update) != RESET)
    {
        out_duty = pid_control(speed);

        if (out_duty >= 0.0f)
        {
            TIM_SetCompare1(TIM1, out_duty);
            TIM_SetCompare2(TIM1, 0);
        }
        else
        {
            TIM_SetCompare1(TIM1, 0);
            TIM_SetCompare2(TIM1, -out_duty);
        }

        TIM_ClearITPendingBit(TIM2, TIM_IT_Update);
    }
}
